Move navigation buttons to edge of padding area to avoid overlapping product cards

--- a/wp-content/themes/angola-b2b/assets/css/homepage.css
+++ b/wp-content/themes/angola-b2b/assets/css/homepage.css
@@ -156,12 +156,12 @@
 
 .stock-swiper-prev,
 .featured-swiper-prev {
-    left: 10px;
+    left: 0;
 }
 
 .stock-swiper-next,
 .featured-swiper-next {
-    right: 10px;
+    right: 0;
 }
 
 .stock-swiper-prev:hover,
